activity-patch-failure.log
  File "/tmp/repository-activity-wiring.py", line 188
    replace_once(
                ^
SyntaxError: '(' was never closed
